config-root/namespaces/jx-staging/bdd-gh-1612285135/bdd-gh-1612285135-bdd-gh-1612285135-deploy.yaml
# Source: bdd-gh-1612285135/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bdd-gh-1612285135-bdd-gh-1612285135
  labels:
    draft: draft-app
    chart: "bdd-gh-1612285135-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: bdd-gh-1612285135-bdd-gh-1612285135
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: bdd-gh-1612285135-bdd-gh-1612285135
    spec:
      serviceAccountName: bdd-gh-1612285135-bdd-gh-1612285135
      containers:
        - name: bdd-gh-1612285135
          image: "gcr.io/jenkins-x-labs-bdd/bdd-gh-1612285135:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
